--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  dio: ^5.4.3+1
-  shared_preferences: ^2.2.3
-  get_it: ^7.7.0
-
+  dio: ^5.4.3+1  # https://pub.dev/packages/dio
+  get_it: ^7.7.0  # https://pub.dev/packages/get_it
+  shared_preferences: ^2.2.3  # https://pub.dev/packages/shared_preferences
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
