implemented splash screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,8 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  flutter: 3.19.2
-  sdk: 3.3.0
+  sdk: '>=3.3.2 <4.0.0'
+  flutter: '>=3.19.2 <4.0.0'
 
 dependencies:
   flutter:
@@ -22,6 +22,8 @@ dependencies:
   get_it: ^7.7.0
   # https://pub.dev/packages/shared_preferences
   shared_preferences: ^2.2.3
+  # https://pub.dev/packages/flutter_native_splash
+  flutter_native_splash: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -44,3 +46,14 @@ flutter_intl:
 
 flutter_gen:
   output: lib/generated/assets
+
+flutter_native_splash:
+  android: true
+  ios: true
+  web: false
+  image: "assets/images/splash_screen/splash_screen.png"
+  color: "#2E6653"
+  android_12:
+    color: "#2E6653"
+    image: "assets/images/splash_screen/splash_screen_12+.png"
+
