--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,16 +24,16 @@ dependencies:
   shared_preferences: ^2.2.3
   # https://pub.dev/packages/flutter_native_splash
   flutter_native_splash: ^2.4.0
+  # https://pub.dev/packages/auto_route
+  auto_route: ^8.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  # https://pub.dev/packages/flutter_gen_runner
   flutter_gen_runner:
-  # https://pub.dev/packages/build_runner
   build_runner:
-  # https://pub.dev/packages/flutter_lints
   flutter_lints: ^3.0.0
+  auto_route_generator: ^8.0.0
 
 flutter:
   generate: true
