--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   flutter_native_splash: ^2.4.0
   # https://pub.dev/packages/auto_route
   auto_route: ^8.1.3
+  # https://pub.dev/packages/flutter_bloc
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
