--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,20 @@
+# This file configures the analyzer, which statically analyzes Dart code to
+# check for errors, warnings, and lints.
+#
+# The issues identified by the analyzer are surfaced in the UI of Dart-enabled
+# IDEs (https://dart.dev/tools#ides-and-editors). The analyzer can also be
+# invoked from the command line by running `flutter analyze`.
+
+# The following line activates a set of recommended lints for Flutter apps,
+# packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
+
+analyzer:
+  exclude:
+    - lib/generated/**
+    - lib/**/*.g.dart
+    - lib/**/*.freezed.dart
+    - "build/**"
 
 linter:
   rules:
@@ -20,17 +36,6 @@ linter:
     use_super_parameters: true
     avoid_print: true
     prefer_single_quotes: true
-
-analyzer:
-  exclude: [
-    build/**,
-    "**/*.freezed.dart",
-    "**/*.g.dart",
-    l10n/**,
-  ]
-
-  errors:
-    body_might_complete_normally_nullable: false
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
