--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   auto_route: ^8.1.3
   # https://pub.dev/packages/flutter_bloc
   flutter_bloc: ^8.1.6
+  # https://pub.dev/packages/logger
+  logger: ^2.3.0
 
 dev_dependencies:
   flutter_test:
