added make file

--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,5 +1,5 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/opt/homebrew/Caskroom/flutter/3.19.2/flutter
+FLUTTER_ROOT=/Users/george/fvm/versions/3.19.2
 FLUTTER_APPLICATION_PATH=/Users/george/StudioProjects/askm
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
