--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/george/fvm/versions/3.19.2
-FLUTTER_APPLICATION_PATH=/Users/george/StudioProjects/askm
+FLUTTER_ROOT=C:\Users\galst\fvm\versions\3.19.2
+FLUTTER_APPLICATION_PATH=C:\Users\galst\StudioProjects\askm
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
