--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,8 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  flutter: "3.19.2"
-  sdk: ">=3.3.0 <4.0.0"
+  flutter: '3.19.2'
+  sdk: '3.3.0'
 
 
 
