--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_svg: ^2.0.10+1
   # https://pub.dev/packages/flutter_launcher_icons
   flutter_launcher_icons: ^0.13.1
+  # https://pub.dev/packages/firebase_core
+  firebase_core: ^3.2.0
 
 dev_dependencies:
   flutter_test:
