added riverpod dependency

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   # https://pub.dev/packages/firebase_core
   firebase_core: ^3.2.0
+  flutter_riverpod: ^2.5.1
+  hooks_riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_test:
