--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_core: ^3.2.0
   flutter_riverpod: ^2.5.1
   hooks_riverpod: ^2.5.1
+  riverpod_annotation: ^2.3.5
+  riverpod_generator: ^2.4.0
 
 dev_dependencies:
   flutter_test:
