--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   hooks_riverpod: ^2.5.1
   riverpod_annotation: ^2.3.5
   riverpod_generator: ^2.4.0
+  flutter_keyboard_visibility: ^6.0.0
 
 dev_dependencies:
   flutter_test:
