--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   firebase_auth: ^5.1.2
   flutter_secure_storage: ^4.2.1
   flutter_keyboard_visibility: ^6.0.0
+  intl: ^0.18.1
+  cloud_firestore: ^5.4.0
+  riverpod_lint: ^2.3.10
 
 dev_dependencies:
   flutter_test:
